Fix the conversation list page so that if the most recent message is longer than a line the text will wrap.

--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -118,3 +118,7 @@
     transform: scale(1.05);
   }
 }
+
+.conversation-message-body {
+  word-break: break-all;
+}
